# MystiCard-Django

./: .env.test  README.md  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_date_published_alter_blog_is_published.py  0003_alter_blog_date_published.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: expand_db.py  fill_db.py
catalog/migrations/: 0001_initial.py  0002_alter_contactformmessage_data_sent.py  0002_product_owner.py  0003_product_date_published_product_is_published.py  0004_category_preview_img.py
catalog/templates/catalog/: add_product.html  base.html  categories.html  contact.html  courses.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html  product_info.html  product_list.html
catalog/templates/catalog/includes/: inc_catalog_footer.html  inc_catalog_nav.html  inc_category_menu.html  (+1 more)
catalog/templatetags/: my_filters.py  my_tags.py
config/: settings.py  urls.py
fixtures/: data.json
users/: forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: create_groups.py  create_moderator_and_blogger.py  csu.py
users/migrations/: 0001_initial.py  0002_user_is_verified.py  0003_alter_user_is_verified.py  0004_remove_user_is_verified_user_vrf_token.py
users/templates/users/: change_password.html  login.html  register.html  user_form.html
